@@ -15,5 +15,7 @@ git_tag_message    = CPAN release %v
 no_AutoPrereq      = 1
 
 [Prereqs / Runtime]
-POE::Component::IRC = 6.56
+IRC::Utils          = 0
+POE                 = 0
+POE::Component::IRC = 6.62
 Text::Wrap          = 0
